Imagen para seccion de profesores

--- a/Proyecto Personal Website/compañerosYProf.html
+++ b/Proyecto Personal Website/compañerosYProf.html
@@ -39,12 +39,12 @@
         <div id="body">
             <h1 id="title">Mis Compañeros</h1>
             <div id="body-container">
-                <section id="acercaDe">
-                    <img src="img/compañeros.png" alt="Imagen de compañeros" id="image-acercaDe">
-                    <section id="acercaDe-text">
+                <section id="compañeros">
+                    <img src="img/compañeros.jpg" alt="Imagen de compañeros" id="image-acercaDe">
+                    <section id="compañeros-text">
                         <p>
-                            <h5>Algunos de los compañeros con los que más he socializado durante la universidad son:</h5>
-                            <br>
+                        <h5>Algunos de los compañeros con los que más he socializado durante la universidad son:</h5>
+                        <br>
                         <ul>
                             <li>Esteban Mora</li>
                             <li>Gabriel Chacón</li>
@@ -57,23 +57,23 @@
 
                     </section>
 
-                    
+
                 </section>
-                <h1 id="title">Acerca de este sitio</h1>
-                <section id="acercaDe">
+                <h1 id="title">Mis Profesores</h1>
+                <section id="profesores">
                     <img src="img/atention.png" alt="Imagen para acerca de este sitio" id="image-acercaDe">
-                    <section id="acercaDe-text">
+                    <section id="profesores-text">
                         <p>
-                            Para este sitio web, se utilizó:
+                        <h5>Algunos de los profesores de los cuales he obtenido conocimientos a
+                            lo largo de la carrera:</h5>
+                            <br>
                         <ul>
-                            <li>HTML5 y CSS para la creación.</li>
-                            <li>Bootstrap como framework frontend.</li>
-                            <li>Enfoque "Mobile First" para la adaptabilidad.</li>
-                            <li>Preprocesadores CSS para una organización eficiente.</li>
-                            <li>Separación de presentación y contenido para futuras modificaciones en el diseño gráfico.
-                            </li>
-                            <li>Metodología MaintainableCSS para un código CSS sostenible.</li>
-                            <li> Estrategia de diseño centrada en la experiencia del usuario.</li>
+                            <li>Edgar Casasola: Programación 1 y 2</li>
+                            <li>Alexandra Martinez: Bases de Datos</li>
+                            <li>Allan Berrocal: Ingenieria de Software</li>
+                            <li>Alberto Rojas: Programación Paralela y Concurrente</li>
+                            <li>Braulio Solano: Desarrollo de Aplicaciones Web</li>
+
                         </ul>
                         </p>
 
