Imagen para seccion de profesores

--- a/Proyecto Personal Website/compañerosYProf.html
+++ b/Proyecto Personal Website/compañerosYProf.html
@@ -40,7 +40,7 @@
             <h1 id="title">Mis Compañeros</h1>
             <div id="body-container">
                 <section id="compañeros">
-                    <img src="img/compañeros.jpg" alt="Imagen de compañeros" id="image-acercaDe">
+                    <img src="img/compañeros.jpg" alt="Imagen de compañeros" id="image-compañeros">
                     <section id="compañeros-text">
                         <p>
                         <h5>Algunos de los compañeros con los que más he socializado durante la universidad son:</h5>
@@ -61,12 +61,11 @@
                 </section>
                 <h1 id="title">Mis Profesores</h1>
                 <section id="profesores">
-                    <img src="img/atention.png" alt="Imagen para acerca de este sitio" id="image-acercaDe">
+
                     <section id="profesores-text">
                         <p>
-                        <h5>Algunos de los profesores de los cuales he obtenido conocimientos a
-                            lo largo de la carrera:</h5>
-                            <br>
+                        <h5>Algunos profesores de quienes he obtenido conocimientos duranta  la carrera:</h5>
+
                         <ul>
                             <li>Edgar Casasola: Programación 1 y 2</li>
                             <li>Alexandra Martinez: Bases de Datos</li>
@@ -78,6 +77,7 @@
                         </p>
 
                     </section>
+                     <img src="img/profesor.png" alt="Imagen de profesores" id="image-profesores">
                 </section>
 
             </div>
