--- a/Proyecto Personal Website/computacion.html
+++ b/Proyecto Personal Website/computacion.html
@@ -40,16 +40,14 @@
             <h1 id="title">Acerca de este sitio</h1>
             <div id="body-container">
                 <section id="computacionDecision">
-                    <img src="img/atention.png" alt="Imagen para acerca de este sitio" id="image-acercaDe">
                     <section id="computacionDecision-text">
                         <p>
                             <h3>Mi Elección de Estudiar Ingeniería del Software</h3>
                             <br>
 
-                            Decidí estudiar ingeniería del software porque desde una edad temprana he sentido
+                             Decidí estudiar ingeniería del software porque desde una edad temprana he sentido
                              una profunda fascinación por la tecnología y cómo esta puede dar vida a ideas innovadoras. 
-                             Mi entusiasmo por la resolución de problemas se alinea perfectamente con los desafíos que 
-                             esta disciplina ofrece. La posibilidad de crear soluciones digitales a medida me brinda una 
+                             La posibilidad de crear soluciones digitales a medida me brinda una 
                              vía para expresar mi creatividad y contribuir al mundo real.
                             <br><br>
                             Lo que me motiva aún más es el impacto tangible que la ingeniería del software puede 
@@ -63,6 +61,7 @@
                         </p>
 
                     </section>
+                    <img src="img/computacion.gif" alt="Imagen para acerca de este sitio" id="image-computacionDecision">
                 </section>
 
             </div>
