--- a/Proyecto Personal Website/descargas.html
+++ b/Proyecto Personal Website/descargas.html
@@ -41,22 +41,25 @@
             <div id="body-container">
                 <section id="descargas">
                     <div id="descargas-text">
-                        <h4>A continuación algunos docs de  presentaciones de las cuales he formado parte, 
-                            corresponden a temas referentes a computación e ingeniería de software 
+                        <h4>A continuación algunos docs de presentaciones de las cuales he formado parte,
+                            corresponden a temas referentes a computación e ingeniería de software
                             por lo pueden ser de utilidad:</h4>
                         <p>
                         <ul>
-                            <li>Voy a mejorar mi relación con Dios y ser una mejor persona, después de todo, Él es la
-                                máxima
-                                prioridad.</li>
-                            <li>Quiero graduarme a más tardar el próximo año para dedicarme a trabajar y ya no tener que
-                                ir
-                                a la universidad y gastar tiempo en los viajes de ida y vuelta.</li>
-                            <li>Quiero conseguir un trabajo estable remoto donde no sea necesario trasladarse.</li>
-                            <li>Más a futuro, quiero comprar mi propia casa.</li>
-                            <li>Quiero casarme con mi novia dentro de unos muy pocos años.</li>
-                            <li>Quiero vivir en paz y tener una felicidad constante.</li>
-                            <li>Quiero viajar y conocer muchos países junto a mi pareja.</li>
+
+                            <i></i><a href="descargas/Research Ethics and HCI.pdf" download class="link">Ética de la
+                                    investigación y HCI</a>
+                            <br><br>
+                            <i></i><a href="descargas/Curso Ingeniería de Software.pdf" download class="link">Curso
+                                    Ingeniería de Software.pdf</a>
+                            <br><br>
+                            <i></i><a href="descargas/Patrón Prototipo.pdf" download class="link">Patrón Prototipo</a>
+                            <br><br>
+                            <i></i><a href="descargas/Presentación patrones.pdf" download class="link">Presentación patrones</a>
+                            <br><br>
+                            <i></i><a href="descargas/Reliability Engineering C04668 C05126.pdf" download class="link">
+                                Ingeniería de Confiabilidad</a>
+
                         </ul>
                         </p>
                     </div>
